# Minecraft-Clone

./: .gitignore  CLAUDE.md  CMakeLists.txt  benchmark_deferred.txt  benchmark_forward.txt
.claude/: settings.local.json
shaders/compute/: hiz_downsample.comp  occlusion_cull.comp
shaders/deferred/: composite.frag  composite.vert  gbuffer.frag  gbuffer.vert  water.frag  water.vert  zprepass.frag  zprepass.vert
shaders/effects/: precipitation.frag  precipitation.vert
shaders/forward/: chunk.frag  chunk.vert  loading.vert  raybox_sprite.frag  raybox_sprite.vert  shadow.frag  shadow.vert  water.frag  water.vert
shaders/postprocess/: bloom_combine.frag  bloom_downsample.frag  bloom_extract.frag  bloom_upsample.frag  fsr_easu.frag  fsr_easu.vert  fsr_rcas.frag  fullscreen_quad.vert  hbao.frag  hbao_blur.frag  ssao.frag  ssao_blur.frag
shaders/sky/: sky.frag  sky.vert
src/: main.cpp  main_vulkan.cpp
src/benchmark/: BenchmarkSystem.h
src/core/: Camera.h  Config.h  CraftingRecipes.h  CrashHandler.cpp  CrashHandler.h  Inventory.h  Item.h  Player.h  Raycast.h
src/input/: KeybindManager.h
src/launcher/: GLLauncher.cpp  Launcher.cpp
src/render/: BackendSelector.cpp  BackendSelector.h  BinaryGreedyMesher.h  BiomeColormap.h  BlockHighlight.h  ChunkBorderRenderer.h  ChunkMesh.h  Crosshair.h  DeferredRenderer.cpp  DeferredRenderer.h  DeferredRendererRHI.cpp  DeferredRendererRHI.h  GPUCulling.h  ItemAtlas.h  MeshOptimizer.h  MiningCrackOverlay.h  RenderPass.cpp  RenderPass.h  RenderPassRHI.cpp  RenderPassRHI.h  Renderer.h  Screenshot.h  ShaderCache.h  ShaderCompiler.cpp  ShaderCompiler.h  TextureAtlas.h  TexturePackLoader.h  VertexPool.h  VertexPoolRHI.h  WorldRendererRHI.cpp  WorldRendererRHI.h  stb_impl.cpp
src/render/rhi/: RHI.h  RHIBuffer.h  RHICommandBuffer.h  RHIDescriptorSet.h  RHIDevice.h  RHIFramebuffer.h  RHIPipeline.h  RHIShader.h  RHITexture.h  RHITypes.h
src/render/rhi/opengl/: GLBuffer.cpp  GLBuffer.h  GLCommandBuffer.cpp  GLCommandBuffer.h  GLDescriptorSet.cpp  GLDescriptorSet.h  GLDevice.cpp  GLDevice.h  GLFramebuffer.cpp  GLFramebuffer.h  GLPipeline.cpp  GLPipeline.h  GLShader.cpp  GLShader.h  GLTexture.cpp  GLTexture.h
src/render/rhi/vulkan/: VKBuffer.cpp  VKBuffer.h  VKCommandBuffer.cpp  VKCommandBuffer.h  VKDescriptorSet.cpp  VKDescriptorSet.h  VKDevice.cpp  VKDevice.h  VKFramebuffer.cpp  VKFramebuffer.h  VKPipeline.cpp  VKPipeline.h  VKShader.cpp  VKShader.h  VKTexture.cpp  VKTexture.h
src/ui/: ControlsScreen.h  CraftingTableUI.h  DebugOverlay.h  InventoryUI.h  JEIPanel.h  LoadingScreen3D.h  MainMenu.h  MenuUI.h  PanoramaRenderer.h  PauseMenu.h  SettingsMenu.h  SurvivalHUD.h  TexturePackScreen.h  VulkanMainMenu.h  VulkanScreens.h  WorldCreateScreen.h  WorldSelectScreen.h
src/world/: Block.h  Chunk.h  ChunkThreadPool.h  DroppedItem.h  TerraMath.h  TerrainGenerator.h  World.h  WorldPresets.h  WorldSaveLoad.h
tests/: VulkanTest.cpp
textures/: HOW_TO_TEXTURE_PACK.txt
